# kawa

./: .gitmodules  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/kawa/: CMakeLists.txt  main.c
src/lang/: CMakeLists.txt
src/lang/libcasm/: CMakeLists.txt  code-gen.c  code-gen.h  libcasm.c  parser.c  parser.h
src/lang/libcasm/parser/: directive.c  directive.h  keyword.c  keyword.h
src/libgear/: CMakeLists.txt  gearapi.c  gearapi.h  gearapi_p.h  objectwriter.c
src/libgear/ast/: ast.h
src/libkengine/: CMakeLists.txt
src/public/lang/casm/: casm-dictionary.h  clex.h  libcasm.h
src/public/libgear/: gearapi.h  objectwriter.h
